# qwen-train-canary

./: .gitignore  CLAUDE.md  Makefile  README.md  baselines.json  forjar-gx10.yaml  forjar-intel-wgpu.yaml  forjar-yoga-teardown.yaml  forjar-yoga.yaml  performance.md  pyproject.toml
.pmat-work/: PMAT-512  PMAT-516  PMAT-517
canaries/apr/: canary-config.yaml  requirements.txt  train.py
canaries/cublas/: train.py
canaries/pytorch/: requirements.txt  train.py
canaries/unsloth/: requirements.txt  train.py
canaries/wgpu/: requirements.txt  train.py
canaries/wgpu/burn-canary/: Cargo.toml
canaries/wgpu/burn-canary/src/: main.rs
contracts/: chunked-lm-head-v1.yaml  cuda-training-forward-v1.yaml  fp16-training-parity-v1.yaml
docs/roadmaps/: roadmap.yaml
docs/specifications/: training-canary-spec.md
docs/specifications/components/: benchmarking-methodology.md  cublas-parity-gate.md  dataset-specification.md  dependencies.md  deployment-topology.md  optimization-roadmap.md  training-profiler.md
prompts/: canary-dataset.yaml
results/: canary-apr-20260331.json  canary-apr-20260401.json  canary-apr-20260402.json  canary-apr-gx10-20260331.json  canary-apr-gx10-20260404.json  canary-apr-gx10-async-20260405.json  canary-apr-gx10-b16-20260405.json  canary-apr-gx10-converge-lr5e5-20260406.json  canary-apr-gx10-cublas-20260406.json  canary-apr-gx10-lr1e3-20260406.json  canary-apr-gx10-lr5e5-20260405.json  canary-apr-gx10-pmat510-20260406.json  canary-apr-gx10-pmat511-20260406.json  canary-apr-gx10-pmat511v2-20260406.json  canary-apr-gx10-pretok-20260405.json  canary-apr-gx10-profile-20260405.json  canary-apr-gx10-qkv-fix-20260406.json  canary-apr-gx10-regressed-20260405.json  canary-apr-gx10-rope-bias-20260406.json  canary-apr-yoga-pmat511v2-20260406.json  canary-apr-yoga-wgpu-20260405.json  canary-compile-gx10-20260331.json  canary-cublas-gx10-20260331.json  canary-cublas-gx10-20260401.json  canary-cublas-gx10-20260405b.json  canary-pytorch-gx10-20260331.json  canary-pytorch-gx10-20260401.json  canary-pytorch-gx10-20260405b.json  canary-pytorch-gx10-20260406.json  canary-unsloth-20260331-run2.json  canary-unsloth-20260331-run3.json  canary-unsloth-20260331-run4.json  canary-unsloth-20260331-run5.json  canary-unsloth-20260331.json  canary-unsloth-20260401.json  canary-unsloth-20260404.json  canary-unsloth-20260405c.json  canary-unsloth-gx10-20260331.json  canary-unsloth-gx10-20260401.json  canary-unsloth-gx10-20260405.json  (+5 more)
scripts/: instrument_profiler.py  nightly.sh  parity-report.py  report.py  score.py  sweep.sh  validate_schema.py  verify_forward.py
tests/: test_graph_wiring.py  test_optimization_coverage.py  test_schema.py  test_scoring.py
