[project]
name = "qwen-train-canary"
version = "0.1.0"
description = "Competitive fine-tuning benchmarks for Qwen2.5-Coder-1.5B"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# GPU canaries (unsloth, pytorch, cublas) — install on CUDA hosts only
# NOTE: On aarch64 (gx10 GB10), unsloth is BLOCKED — use cuda-base instead.
# Root cause: unsloth -> torchao >= 0.13 -> torch.int1 (torch 2.6+) but
# torch 2.6+ from PyPI doesn't support sm_121 (Blackwell). See PMAT-508.
cuda = [
    "torch>=2.6",
    "transformers>=4.45",
    "datasets>=3.0",
    "trl>=0.12",
    "peft>=0.13",
    "bitsandbytes>=0.44; platform_machine == 'x86_64'",
    "bitsandbytes>=0.45; platform_machine == 'aarch64'",
    "unsloth>=2024.12; platform_machine == 'x86_64'",
    "accelerate>=1.0",
]
# pytorch/cublas canaries only — works on both x86_64 and aarch64
cuda-base = [
    "torch>=2.6",
    "transformers>=4.45",
    "datasets>=3.0",
    "trl>=0.12",
    "peft>=0.13",
    "accelerate>=1.0",
]
# Scoring and reporting — no GPU needed
score = [
    "pyyaml>=6.0",
]

[tool.uv]
# triton is x86_64 only — skip on aarch64 (gx10 GB10)
override-dependencies = [
    "triton>=3.0; platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# gx10 (aarch64 GB10 sm_121) needs torch from default PyPI (cu130).
# cu126 index has NO aarch64 wheels with Blackwell support.
# x86_64 can use cu126 index for smaller downloads.
[tool.uv.sources]
torch = { index = "pytorch-cu126", marker = "platform_machine == 'x86_64'" }
torchvision = { index = "pytorch-cu126", marker = "platform_machine == 'x86_64'" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
