[package]
name = "burn-canary"
version = "0.1.0"
edition = "2021"
description = "WGPU/Vulkan training canary using burn framework"

[dependencies]
burn = { version = "0.16", features = ["train", "wgpu"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
